# sync_db

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: info.py
app/background/: tasks.py
app/clients/: http_fetcher.py
app/config/: logger.py  settings.py
app/containers/: category.py  image.py  info.py  main_page.py  mark.py  parameter.py  product.py
app/db/: session.py
app/db/models/: __init__.py  associations.py  base.py  category.py  image.py  mark.py  parameter.py  product.py  special_project_parameter.py
app/middlewares/: logger.py
app/repository/: base.py  category.py  image.py  mark.py  parameter.py  product.py  special_project_parameter.py
app/service/: update.py
