[project]
name = "data-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "isort>=6.0.1",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.4",
    "sqlalchemy>=2.0.41",
]
